@@ -1,7 +1,8 @@
 DIST filedesc-20080104.tar.bz2 4876 RMD160 f1cc881931f8fc584c0d4851140d7a9ec7af4504 SHA1 b8d205e4e42a73f585c19bb5aea257330219dcb0 SHA256 451ecb9cf6351b5e79b616c1df2a7786ef9ff2b962584cb3dda63daeb078077d
 DIST filedesc-20080906-qt3.tar.bz2 3214 RMD160 0148895f59726aff8f2707e760f04c88f6360eed SHA1 20e29715ada76a479eabe8fe8ecd8b4ae50c6ba7 SHA256 024b19e1334fa529786fecafa28aea2b846f84c323c5269294e88da55dc837ad
-DIST kadu-0.6.5.tar.bz2 1312474 RMD160 26a80cb7b0c7dbc8c2c38ae9b8aa6609eb0fd8ad SHA1 9cacbec423c192f6482d9d67a163350191f5bfe2 SHA256 09f17f4b23a3ea8590135ff4a050b52565f3a364bfe4d986079c5be0bba83fdb
-EBUILD kadu-filedesc-0.6.0_p20080104.ebuild 240 RMD160 f1602ae26c37d99a0997b26678388d2dadca745e SHA1 97a26c9a9a4ab802c979a0008d2c1aea7ec14f2a SHA256 7612d2286175bbe09610c9042670f85e6f9ab83859ba51672468ed65e0ad7741
-EBUILD kadu-filedesc-0.6.0_p20080906.ebuild 244 RMD160 cbfed04962aaca9243f0c88b96e98ae45706abf0 SHA1 430e770a9e80d23590ac0828a6a45b2f9253ee05 SHA256 dd927d330f43568bac996cdde489f28c45cede8486fc0131b1effedd7668a488
-EBUILD kadu-filedesc-0.6.5.ebuild 160 RMD160 688a3bc81c55a631547256db774d689dc86f5939 SHA1 7f980251c8a1a0c96d8e6401468253abfda35ce0 SHA256 821e3db2c48e670587d9dcd8fb7109b06baf19bb515c83b218b2c1f0af07d98d
-MISC ChangeLog 794 RMD160 c9eff1e5526a27f85e43c753ab451a68d59cf2df SHA1 02da4383535d3147fe6a9381caddf4f64ff36449 SHA256 f6272537759ed0b5ed3a0cf4c97a14d6218c1f579d2d78585eeecf571fd610cf
+DIST kadu-0.6.5.1.tar.bz2 1341099 RMD160 3c1a8a770d0701e019b5ed68658d20ea6f789e45 SHA1 1257b37c30d9682d4fd350b78d983de04b970872 SHA256 e2df2e1d7c1fa9a5d931a35efeb936088c42ef4b5d42fef8dddadc40f87397e2
+EBUILD kadu-filedesc-0.6.0_p20080104.ebuild 369 RMD160 9adde8069571270d1109c9a096f982f4c738d3d8 SHA1 e7e6c967e603bcaa4014338cf7152c0b5e110940 SHA256 50203290ea2961ca63a82e687a21bdbc3b6da902feb13484fcfdf1a84265b255
+EBUILD kadu-filedesc-0.6.0_p20080906.ebuild 373 RMD160 e4b9a7fea465960f0e2b5db798d56eae3d3d5aaf SHA1 c70a6340d2cbbc0878a4d0cb3ebaa520e8d9fe5c SHA256 1c79a28359769cc119b389ae328f022629c917c9cada7bca1ea52ba694806d63
+EBUILD kadu-filedesc-0.6.5.1.ebuild 254 RMD160 63797269fb7fcb0f46a3ab33c1fca4df6ffef11f SHA1 099dddca7594c6859021e00c62812802abd2c0e7 SHA256 ac14859b98e83a9e5b1f908ab2754b7e5005d488bc17e4ddd4d25999e5696cc7
+MISC ChangeLog 1057 RMD160 e2eac1ff390a5435611cb701fe79479568bc852d SHA1 a1b5dacb1b89b25259e8af099eacb492c2181788 SHA256 49678193717ca0c48e0b4557e655d06e5eb4579338f9caf70b9eafeb03c8db09
+MISC metadata.xml 244 RMD160 fcdb1f5f93ea0a45207aa3ba4ec6cacbe527c0db SHA1 37fa1906c0e0ec9e8ee54787a8b97c1b23270f04 SHA256 e9d24a79e73b4d1d8577b7e887e96a818c4b807ed590c9b83de26cd30e0f0d3a
