@@ -1,3 +1,7 @@
+# Copyright 1999-2009 Gentoo Foundation
+# Distributed under the terms of the GNU General Public License v2
+# $Header: $
+
 SRC_URI="http://kadu.net/download/modules_extra/filedesc/filedesc-${PV/0.6.0_p/}-qt3.tar.bz2"
 
 MOD_TYPE="ext"
@@ -7,3 +11,4 @@ inherit kadu-module
 DESCRIPTION="Kadu module allowing taking description from file"
 HOMEPAGE="http://kadu.net"
 KEYWORDS="amd64 x86"
+IUSE=""
