@@ -1,6 +1,12 @@
 # ChangeLog for net-im/kadu-filedesc
-# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
+# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
+
+  25 Jan 2009; Michał Ziąbkowski <mziab@o2.pl>
+  kadu-filedesc-0.6.0_p20080104.ebuild,
+  kadu-filedesc-0.6.0_p20080906.ebuild, -kadu-filedesc-0.6.5.ebuild,
+  +kadu-filedesc-0.6.5.1.ebuild, +metadata.xml:
+  Bumped. Removed previous version. Some repoman fixes.
 
   18 Dec 2008; Michał Ziąbkowski <mziab@o2.pl>
   +kadu-filedesc-0.6.0_p20080906.ebuild:
